inventory does no longer show double border

--- a/src/components/ui/inventory/css/inventory.css
+++ b/src/components/ui/inventory/css/inventory.css
@@ -2,6 +2,7 @@
 .inventory .inventory-item {
     display: inline-block;
     border: 1px solid green;
+    border-right-width: 0;
     position: relative;
     /* box-sizing: border-box; */
 }
@@ -19,4 +20,8 @@
     width: 1px;
     height: 0;
     padding-bottom: 100%;
-  }
+}
+
+.inventory .inventory-item:last-child {
+    border-right-width: 1px;
+}
